fix z-index of whatsapp button

--- a/src/app/shared/components/whatsapp-button/whatsapp-button.component.scss
+++ b/src/app/shared/components/whatsapp-button/whatsapp-button.component.scss
@@ -23,6 +23,7 @@ $color2: #8ad946;
   position: fixed;
   bottom: 12px;
   right: 12px;
+  z-index: 999;
 }
 
 .whatsapp:hover::after,
